# serva

./: .env.dist  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  shell.nix
app/: Dockerfile  main.py
data/: meta.json
ekl/filebeat/: filebeat.yml
elk/filebeat/: filebeat.retail.yml  filebeat.yml  filebeat68.yml  filebeat717.yml
elk/logstash/pipeline/: logstash.conf
logs/: filebeat  filebeat.1  filebeat.2
src/: app.py  ui.py
