[tool.poetry]
name = "ragspital"
version = "0.1.0"
description = "A RAG Hospital System"
authors = ["Cristian Angulo <cristianangulonova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faust-streaming = "^0.11.0"

[tool.poetry.group.dev.dependencies]
faker = "^25.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
